Fix banner overflow

--- a/components/banner/index.css
+++ b/components/banner/index.css
@@ -8,7 +8,7 @@
   justify-content: center;
   width: 100%;
   min-height: 90vh;
-  padding: 10vh 0;
+  padding: 10vh var(--document-margin);
   position: relative;
   overflow: hidden;
   z-index: 0;
@@ -29,8 +29,14 @@
 
 .Banner-title {
   font: var(--heading-font);
-  font-size: 6rem;
+  font-size: 3rem;
   max-width: 11em;
+}
+
+@media (min-width: 600px) {
+  .Banner-title {
+    font-size: 6rem;
+  }
 }
 
 .Banner-label {
